--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb
                                 28,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">Protect your Accounts with Encrypted<br>password files</a></div>
+                            <div class=""><a href="single.html" class="fh5co_good_font_2">How to hack WiFi using Wifite</a></div>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Jan
                                 28,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">Iphone 14 Pro</a></div>
+                            <div class=""><a href="single.html" class="fh5co_good_font_2">Protect Password File by Encrypted</a></div>
                         </div>
                     </div>
                 </div>
