--- a/Contact_us.html
+++ b/Contact_us.html
@@ -8,7 +8,6 @@
 -->
 <html lang="en" class="no-js">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>IamDreamer</title>
@@ -20,9 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
     <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
-    <!-- Bootstrap CSS -->
     <link href="css/style_1.css" rel="stylesheet" type="text/css"/>
-    <!-- Modernizr JS -->
     <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 <body>
@@ -42,16 +39,12 @@
 <div class="container-fluid">
     <div class="container">
         <div class="row">
-            <!--check and edit the link-->
             <div class="col-12 col-md-3 fh5co_padding_menu">
               <a href="iamdreamer.co.in">
               <img  src="images/logo.png" alt="iamdreamer.co.in" class="fh5co_logo_width">
               </a>
             </div>
             <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-                <!--<div class="text-center d-inline-block">
-                    <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
-                </div>-->
                 <div class="text-center d-inline-block">
                     <a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
                 </div>
@@ -90,13 +83,13 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="black/black/index.html">CyberDocs<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="black/black/index.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">UnboxOverflow<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="single.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">4x4Trek<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="single.html">Free BootCamp<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="Contact_us.html">Shop<span class="sr-only">(current)</span></a>
@@ -127,7 +120,7 @@
                     </div>
                     <div class="col-9 align-self-center fh5co_contact_us_no_icon_difh5co_hover_2">
                         <span class="c_g d-block">Call Us</span>
-                        <span class="d-block c_g fh5co_contact_us_no_text">+1 800 559 658</span>
+                        <span class="d-block c_g fh5co_contact_us_no_text">+91 9074958879</span>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -139,7 +132,7 @@
                     </div>
                     <div class="col-9 align-self-center fh5co_contact_us_no_icon_difh5co_hover_2">
                         <span class="c_g d-block">Have any questions?</span>
-                        <span class="d-block c_g fh5co_contact_us_no_text">News@example.com</span>
+                        <span class="d-block c_g fh5co_contact_us_no_text">info@iamdreamer.co.in</span>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -151,7 +144,7 @@
                     </div>
                     <div class="col-9 align-self-center fh5co_contact_us_no_icon_difh5co_hover_2">
                         <span class="c_g d-block">Address</span>
-                        <span class="d-block c_g fh5co_contact_us_no_text"> 123 Some Street USA</span>
+                        <span class="d-block c_g fh5co_contact_us_no_text">M.G Road, Bangalore</span>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -197,8 +190,7 @@
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
                 <div class="footer_sub_about pb-3">
-
-                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments. Thank you for choosing our company as your technology partner. We look forward to working with you and helping you achieve your goals.
+                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table_footer">
@@ -238,34 +230,17 @@
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
                 <div class="footer_makes_sub_font"> Dec 31, 2016</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
-              <!--  <div class="footer_position_absolute"><img src="images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div> -->
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3"> Most Viewed Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download (2).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/ryan-moreno-98837.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-            </div>
-        </div>
-        <div class="row justify-content-center pt-2 pb-4">
-            <div class="col-12 col-md-8 col-lg-7 ">
-                <div class="input-group">
-                    <span class="input-group-addon fh5co_footer_text_box" id="basic-addon1"><i class="fa fa-envelope"></i></span>
-                    <input type="text" class="form-control fh5co_footer_text_box" placeholder="Enter your email..." aria-describedby="basic-addon1">
-                    <a href="#" class="input-group-addon fh5co_footer_subcribe" id="basic-addon12"> <i class="fa fa-paper-plane-o"></i>&nbsp;&nbsp;Subscribe</a>
-                </div>
+                <div class="footer_makes_sub_font">Jan 31, 2023</div>
+                <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
+                <div class="footer_makes_sub_font"> Feb 23, 2023</div>
+                <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
+                <div class="footer_makes_sub_font"> Jan 28, 2023</div>
+                <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2022</div>
+                <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
     </div>
@@ -281,23 +256,17 @@
         </div>
     </div>
 </div>
-
 <div class="gototop js-top">
     <a href="#" class="js-gotop"><i class="fa fa-arrow-up"></i></a>
 </div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
-<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
-<!-- Main -->
 <script src="js/main.js"></script>
-
 </body>
