--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img"><img src="images/programmingLanguages/python/480/Python.png" alt=""/></div>
                     <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Methods in Python</span></a>
+                        <a href="method-python.html" class="d-block fh5co_small_post_heading"><span class="">Methods in Python</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Feb 25 2023</div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                 <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
                     <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Machine Learning</span></a>
+                        <a href="Linear-Regression-in-ML-AI.html" class="d-block fh5co_small_post_heading"><span class="">Machine Learning</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                     </div>
                 </div>
@@ -510,7 +510,8 @@
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3">About</div>
-                <div class="footer_sub_about pb-3">Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
+                <div class="footer_sub_about pb-3">
+                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table_footer">
