--- a/index.html
+++ b/index.html
@@ -279,15 +279,7 @@
                             <div class="fh5co_news_img">
                                 <iframe width="100%" height="200" src="https://www.youtube.com/embed/0jE_XGOiyAU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
-                          <!-- <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide">
-                                <img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt=""/>
-                            </div> -->
-                          <!--<div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">-->
-                            <!--<div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
-                                    <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
-                                        <span><i class="fa fa-play"></i></span>
-                                    </div>
-                                </div> -->
+                          <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">
                             </div>
                         </div>
                         <div>
@@ -302,15 +294,7 @@
                             <div class="fh5co_news_img">
                                 <iframe width="100%" height="200" src="https://www.youtube.com/embed/-cqIFUUtU8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
-                        <!--<div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_2">
-                                <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt=""/>
-                            </div> -->
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_2" id="play-video_2">
-                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
-                                    <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
-                                        <span><i class="fa fa-play"></i></span>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div>
@@ -325,14 +309,7 @@
                             <div class="fh5co_news_img">
                                 <iframe width="100%" height="200" src="https://www.youtube.com/embed/19UYcE-iRcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
-                            <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_3">
-                                <img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt=""/></div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_3" id="play-video_3">
-                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
-                                    <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
-                                        <span><i class="fa fa-play"></i></span>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div>
@@ -347,15 +324,7 @@
                             <div class="fh5co_news_img">
                                 <iframe width="100%" height="200" src="https://www.youtube.com/embed/pZ9Nv8wsUYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
-                            <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_4">
-                                <img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt=""/>
-                            </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_4" id="play-video_4">
-                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
-                                    <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
-                                        <span><i class="fa fa-play"></i></span>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div>
