--- a/oops-in-programming.html
+++ b/oops-in-programming.html
@@ -86,19 +86,19 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="black/black/index.html">Education<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="cyberdocs/index.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">Lifestyle<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">Free BootCamp<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="">Free BootCamp<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Shop<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="">Shop<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Resources<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="">Resources<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
