--- a/education.html
+++ b/education.html
@@ -251,37 +251,37 @@
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Fern WiFi Cracker</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Oops.png" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">Understanding Methods in Python: A Fundamental Aspect of Object-Oriented Programming</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
                     <div>
-                        <a href="Linear-Regression-in-ML-AI.html" class="d-block fh5co_small_post_heading"><span class="">Linear Regression in Machine Learning</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">Understanding Pointers in C++</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
                     </div>
                 </div>
             </div>
@@ -297,6 +297,7 @@
                 <div class="footer_main_title py-3"> About</div>
                 <div class="footer_sub_about pb-3">
                     Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
+                </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table_footer">
                         <div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div>
@@ -335,6 +336,7 @@
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
                 <div class="footer_makes_sub_font"> Dec 31, 2016</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
+              <!--  <div class="footer_position_absolute"><img src="images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div> -->
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3">Tech News</div>
@@ -346,6 +348,15 @@
                 <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
                 <div class="footer_makes_sub_font">Dec 31, 2022</div>
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
+            </div>
+        </div>
+        <div class="row justify-content-center pt-2 pb-4">
+            <div class="col-12 col-md-8 col-lg-7 ">
+                <div class="input-group">
+                    <span class="input-group-addon fh5co_footer_text_box" id="basic-addon1"><i class="fa fa-envelope"></i></span>
+                    <input type="text" class="form-control fh5co_footer_text_box" placeholder="Enter your email..." aria-describedby="basic-addon1">
+                    <a href="#" class="input-group-addon fh5co_footer_subcribe" id="basic-addon12"> <i class="fa fa-paper-plane-o"></i>&nbsp;&nbsp;Subscribe</a>
+                </div>
             </div>
         </div>
     </div>
@@ -368,13 +379,16 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
+<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
+<!-- Main -->
 <script src="js/main.js"></script>
 
 </body>
