--- a/oops-in-programming.html
+++ b/oops-in-programming.html
@@ -256,16 +256,16 @@
                 <div class="fh5co_tags_all">
                     <a href="#" class="fh5co_tagg">Business</a>
                     <a href="#" class="fh5co_tagg">Technology</a>
-                    <a href="#" class="fh5co_tagg">Sport</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
+                    <a href="#" class="fh5co_tagg">Hacking</a>
+                    <a href="#" class="fh5co_tagg">AI-ML</a>
                     <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
+                    <a href="#" class="fh5co_tagg">Gadgets</a>
                     <a href="#" class="fh5co_tagg">Photography</a>
-                    <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
+                    <a href="#" class="fh5co_tagg">Blockchain</a>
+                    <a href="#" class="fh5co_tagg">Cyber Attacks</a>
                     <a href="#" class="fh5co_tagg">Education</a>
-                    <a href="#" class="fh5co_tagg">Social</a>
-                    <a href="#" class="fh5co_tagg">ML</a>
+                    <a href="#" class="fh5co_tagg">GPT</a>
+                    <a href="#" class="fh5co_tagg">Cloud</a>
                 </div>
                 <div>
                     <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
